Cleanup props returned by API-endpoints
